--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run serve:dev",
     "build": "echo 'npm run build:[env]\ndev/stage/prod'",
-    "build:dev": "webpack --config ./webpack.config.js --env.name dev",
+    "build:dev": "webpack --config ./webpack.config.js --env.name dev --display-error-details",
     "build:stage": "webpack --config ./webpack.config.js --env.name stage",
     "build:prod": "webpack --config ./webpack.config.js --env.name prod",
     "serve": "echo 'npm run serve:[env]\ndev/stage/prod'",
     "serve:dev": "webpack-dev-server --env.name dev --watch --content-base dist/",
     "serve:stage": "webpack-dev-server --env.name stage --watch --content-base dist/",
-    "serve:prod": "webpack-dev-server --env.name prod --watch --content-base dist/"
+    "serve:prod": "webpack-dev-server --env.name prod --watch --content-base dist/",
+    "webpack-dev-server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -34,12 +35,19 @@
   "devDependencies": {
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.28.4",
+    "enhanced-resolve": "^3.3.0",
     "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "2.28.0",
     "node-sass": "4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "0.5.1",
+    "resolve-url-loader": "^2.1.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "sugarss": "^1.0.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "1.16.5"
   },
